fix: remove deprecated fields from exported csv and fix list of editors